<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_py_sample</name>
  <version>0.0.0</version>
  <description>The turtlebot3_py_sample package, this package should be run on hosts</description>

  <maintainer email="mes900903@gmail.com">Mes</maintainer>

  <license>MRL-10-14</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot3_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
